<resources>
    <string name="app_name">Gatt Server</string>
    <string name="connected_devices_text_view">Connected devices</string>
    <string name="devices_found_text_view">Devices found</string>
    <string name="input_data_to_selected_button">Send data to selected</string>
    <string name="connect_to_selected_btn">Input data to send</string>
    <string name="connect">Connect</string>
    <string name="discovery">discovery</string>
    <string name="button_send_info">Send info</string>
    <string name="example_hint">Enter ...</string>
    <string name="connected_device">Connected Devices</string>
    <string name="title_send_info">Enter Info</string>
    <string name="the_development_team">The Development Team</string>
    <string name="strazhevich_mikhail">User Interface And Graphics Developer \n \'Strazhevich Mikhail\'</string>
    <string name="artsiomchyk_yahor">Hardware Developer\n \'Artsiomchyk Yahor\'</string>
    <string name="lukianiuk_danylo">Application Developer \n \'Lukianiuk Danylo\'</string>
    <string name="error_empty">Nie może być puste</string>
    <string name="error_not_number">Musi być liczbą</string>
    <string name="error_range">Zakres:</string>
    <string name="sys_ci_nienie_skurczowe_mmhg">Sys. Ciśnienie skurczowe (mmHg)</string>
    <string name="dia_ci_nienie_rozkurczowe_mmhg">Dia. Ciśnienie rozkurczowe (mmHg)</string>
    <string name="temperatura_c">Temperatura (°C)</string>
    <string name="t_tno_bpm">Tętno (bpm)</string>
    <string name="st_enie_glukozy">Stężenie glukozy</string>
    <string name="saturacja_tlenu_spo2">Saturacja tlenu (SpO2 %)</string>

</resources>