<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="16dp"
            android:layout_weight="0"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/connected_devices_text_view"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imageStartServer"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/connect"
                    app:srcCompat="@drawable/bluetooth_24dp_1f1f1f_fill0_wght400_grad0_opsz24" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewItemsConnectedOrSaved"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/buttonSend"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            tools:itemCount="4"
            tools:listitem="@layout/discovered_dedvice_item" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/input_data_to_selected_button"
            android:background="@drawable/button_neon"
            android:textColor="@color/white"
            android:backgroundTint="@null"
            style="@style/Widget.AppCompat.Button" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationArrow"
        android:layout_width="150dp"
        android:layout_height="95dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_cacheComposition="true"
        app:lottie_clipToCompositionBounds="true"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/animation_arrow"
        app:lottie_renderMode="hardware"
        app:lottie_speed="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
